--- a/manulife.html
+++ b/manulife.html
@@ -32,6 +32,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/manulife.html" style="color: #0cc47b">Manulife</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/nokia.html">Nokia</a>
+      </li>
     </ul>
   </div>  
 </nav>
