--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 	  </li>
 	  <li class="nav-item">
         <a class="nav-link" href="/manulife.html">Manulife</a>
+	  </li>
+	  <li class="nav-item">
+        <a class="nav-link" href="/nokia.html">Nokia</a>
       </li>
     </ul>
   </div>  
